[gd_scene load_steps=27 format=2]

[ext_resource path="res://Prefabs/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enemies/Boss_Thoth/Thoth_body.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/Tileset/GrassTileset_bg.tres" type="TileSet" id=3]
[ext_resource path="res://Character/Thoth.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Thoth_Moving_Platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://Character/Kern.tscn" type="PackedScene" id=6]
[ext_resource path="res://Character/Obelisk.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Prefabs/Transition_In.tscn" type="PackedScene" id=9]
[ext_resource path="res://Prefabs/UI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/World_BOSS.gd" type="Script" id=11]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Spike_group.gd" type="Script" id=13]
[ext_resource path="res://Prefabs/CelMap_sensor.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Enemies/Boss_Thoth/Thoth_hand.png" type="Texture" id=15]

[sub_resource type="Animation" id=3]
resource_name = "down"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("SpikeEye_Boss:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, -80 ), Vector2( 7, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpikeEye_Boss2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 55, -80 ), Vector2( 55, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpikeEye_Boss3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 103, -80 ), Vector2( 103, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpikeEye_Boss4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 151, -80 ), Vector2( 151, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpikeEye_Boss5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 199, -80 ), Vector2( 199, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpikeEye_Boss6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 247, -80 ), Vector2( 247, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath("SpikeEye_Boss:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpikeEye_Boss2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 55, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpikeEye_Boss3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 103, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpikeEye_Boss4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 151, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpikeEye_Boss5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 199, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpikeEye_Boss6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 247, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "up"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("SpikeEye_Boss:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 0 ), Vector2( 7, -80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpikeEye_Boss2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 55, 0 ), Vector2( 55, -80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpikeEye_Boss3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 103, 0 ), Vector2( 103, -80 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpikeEye_Boss4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 151, 0 ), Vector2( 151, -80 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpikeEye_Boss5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 199, 0 ), Vector2( 199, -80 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpikeEye_Boss6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 247, 0 ), Vector2( 247, -80 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade-in"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade-out"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "full_color"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade-in"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade-out"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "full_color"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="World_BOSS" type="Node"]
script = ExtResource( 11 )

[node name="bg" type="TileMap" parent="."]
z_index = -2
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -655355, 4, 0, -655354, 4, 0, -655353, 4, 0, -655352, 4, 0, -655351, 4, 0, -655350, 4, 0, -655349, 4, 0, -655348, 4, 0, -655347, 4, 0, -655346, 4, 0, -589818, 4, 0, -589817, 4, 0, -589816, 4, 0, -589815, 4, 0, -589814, 4, 0, -589813, 4, 0, -589812, 4, 0, -589811, 4, 0, -524281, 4, 0, -524280, 4, 0, -524279, 4, 0, -524278, 4, 0, -524277, 4, 0, -524276, 4, 0, -458745, 4, 0, -458744, 4, 0, -458743, 4, 0, -458742, 4, 0, -458741, 4, 0, -458740, 4, 0, -393209, 4, 0, -393208, 4, 0, -393207, 4, 0, -393206, 4, 0, -393205, 4, 0, -393204, 4, 0, -327673, 4, 0, -327672, 4, 0, -327671, 4, 0, -327670, 4, 0, -327669, 4, 0, -327668, 4, 0, -262137, 4, 0, -262136, 4, 0, -262135, 4, 0, -262134, 4, 0, -262133, 4, 0, -262132, 4, 0, -196602, 4, 0, -196601, 4, 0, -196600, 4, 0, -196599, 4, 0, -196598, 4, 0, -196597, 4, 0, -196596, 4, 0, -196595, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -131060, 4, 0, -131059, 4, 0, -131058, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 7, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 4, 0, 589843, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0 )

[node name="Bg_spr" type="Sprite" parent="."]
position = Vector2( 160, 80 )
z_index = -2
texture = ExtResource( 2 )

[node name="Spike_group" type="Node2D" parent="."]
position = Vector2( 32, 240 )
z_index = -2
script = ExtResource( 13 )

[node name="SpikeEye_Boss" parent="Spike_group" instance=ExtResource( 7 )]
position = Vector2( 7, 0 )

[node name="SpikeEye_Boss2" parent="Spike_group" instance=ExtResource( 7 )]
position = Vector2( 55, 0 )

[node name="SpikeEye_Boss3" parent="Spike_group" instance=ExtResource( 7 )]
position = Vector2( 103, 0 )

[node name="SpikeEye_Boss4" parent="Spike_group" instance=ExtResource( 7 )]
position = Vector2( 151, 0 )

[node name="SpikeEye_Boss5" parent="Spike_group" instance=ExtResource( 7 )]
position = Vector2( 199, 0 )

[node name="SpikeEye_Boss6" parent="Spike_group" instance=ExtResource( 7 )]
position = Vector2( 247, 0 )

[node name="anim_player" type="AnimationPlayer" parent="Spike_group"]
autoplay = "normal"
anims/down = SubResource( 3 )
anims/normal = SubResource( 1 )
anims/up = SubResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -589825, 0, 8, -655360, 0, 10, -655359, 0, 10, -655358, 0, 10, -655357, 0, 10, -655356, 0, 10, -655355, 0, 10, -655354, 0, 10, -655353, 0, 11, -655352, 4, 0, -655351, 7, 0, -655350, 7, 0, -655349, 4, 0, -655348, 0, 8, -655347, 0, 10, -655346, 0, 10, -655345, 0, 10, -655344, 0, 10, -655343, 0, 10, -655342, 0, 10, -655341, 0, 10, -655340, 0, 11, -524289, 0, 65544, -589824, 0, 131081, -589823, 0, 131081, -589822, 0, 131081, -589821, 0, 131081, -589820, 0, 131081, -589819, 0, 131081, -589818, 0, 131081, -589817, 0, 131083, -589816, 5, 0, -589813, 3, 0, -589812, 0, 65544, -589811, 0, 131081, -589810, 0, 131081, -589809, 0, 131081, -589808, 0, 131081, -589807, 0, 131081, -589806, 0, 131081, -589805, 0, 131081, -589804, 0, 131083, -458753, 0, 65544, -524288, 0, 131081, -524287, 0, 131081, -524286, 0, 131081, -524285, 0, 131081, -524284, 0, 131081, -524283, 0, 131081, -524282, 0, 131081, -524281, 0, 131083, -524280, 5, 0, -524277, 3, 0, -524276, 0, 65544, -524275, 0, 131081, -524274, 0, 131081, -524273, 0, 131081, -524272, 0, 131081, -524271, 0, 131081, -524270, 0, 131081, -524269, 0, 131081, -524268, 0, 131083, -393217, 0, 65544, -458752, 0, 131081, -458751, 0, 131081, -458750, 0, 131081, -458749, 0, 131081, -458748, 0, 131081, -458747, 0, 131081, -458746, 0, 131081, -458745, 0, 131083, -458744, 5, 0, -458741, 3, 0, -458740, 0, 65544, -458739, 0, 131081, -458738, 0, 131081, -458737, 0, 131081, -458736, 0, 131081, -458735, 0, 131081, -458734, 0, 131081, -458733, 0, 131081, -458732, 0, 131083, -327681, 0, 65544, -393216, 0, 131081, -393215, 0, 131081, -393214, 0, 131081, -393213, 0, 131081, -393212, 0, 131081, -393211, 0, 131081, -393210, 0, 131081, -393209, 0, 131083, -393208, 5, 0, -393205, 3, 0, -393204, 0, 65544, -393203, 0, 131081, -393202, 0, 131081, -393201, 0, 131081, -393200, 0, 131081, -393199, 0, 131081, -393198, 0, 131081, -393197, 0, 131081, -393196, 0, 131083, -262145, 0, 65544, -327680, 0, 131081, -327679, 0, 131081, -327678, 0, 131081, -327677, 0, 131081, -327676, 0, 131081, -327675, 0, 131081, -327674, 0, 131081, -327673, 0, 131083, -327672, 5, 0, -327669, 3, 0, -327668, 0, 65544, -327667, 0, 131081, -327666, 0, 131081, -327665, 0, 131081, -327664, 0, 131081, -327663, 0, 131081, -327662, 0, 131081, -327661, 0, 131081, -327660, 0, 131083, -196609, 0, 65544, -262144, 0, 131081, -262143, 0, 131081, -262142, 0, 131081, -262141, 0, 131081, -262140, 0, 131081, -262139, 0, 131081, -262138, 0, 131081, -262137, 0, 131083, -262136, 5, 0, -262133, 3, 0, -262132, 0, 65544, -262131, 0, 131081, -262130, 0, 131081, -262129, 0, 131081, -262128, 0, 131081, -262127, 0, 131081, -262126, 0, 131081, -262125, 0, 131081, -262124, 0, 131083, -131073, 0, 65544, -196608, 0, 131081, -196607, 0, 131081, -196606, 0, 131081, -196605, 0, 131081, -196604, 0, 131081, -196603, 0, 131081, -196602, 0, 131081, -196601, 0, 131083, -196600, 5, 0, -196597, 3, 0, -196596, 0, 65544, -196595, 0, 131081, -196594, 0, 131081, -196593, 0, 131081, -196592, 0, 131081, -196591, 0, 131081, -196590, 0, 131081, -196589, 0, 131081, -196588, 0, 131083, -65537, 0, 65544, -131072, 0, 131081, -131071, 0, 131081, -131070, 0, 131081, -131069, 0, 131081, -131068, 0, 131081, -131067, 0, 131081, -131066, 0, 131081, -131065, 0, 131083, -131064, 5, 0, -131061, 3, 0, -131060, 0, 65544, -131059, 0, 131081, -131058, 0, 131081, -131057, 0, 131081, -131056, 0, 131081, -131055, 0, 131081, -131054, 0, 131081, -131053, 0, 131081, -131052, 0, 131083, -1, 0, 65544, -65536, 0, 131081, -65535, 0, 131078, -65534, 0, 196617, -65533, 0, 196617, -65532, 0, 196618, -65531, 0, 196617, -65530, 0, 196617, -65529, 0, 131079, -65528, 8, 0, -65525, 6, 0, -65524, 0, 131076, -65523, 0, 196617, -65522, 0, 196617, -65521, 0, 196618, -65520, 0, 196617, -65519, 0, 196617, -65518, 0, 131077, -65517, 0, 131081, -65516, 0, 131083, 65535, 0, 65544, 0, 0, 131078, 1, 0, 196619, 4, 0, 131072, 7, 0, 131072, 12, 0, 131072, 15, 0, 131072, 18, 0, 196616, 19, 0, 131077, 20, 0, 131083, 131071, 0, 65544, 65536, 0, 131083, 65555, 0, 65544, 65556, 0, 131083, 196607, 0, 65544, 131072, 0, 131083, 131091, 0, 65544, 131092, 0, 131083, 262143, 0, 65544, 196608, 0, 131083, 196627, 0, 65544, 196628, 0, 131083, 327679, 0, 65544, 262144, 0, 131083, 262163, 0, 65544, 262164, 0, 131083, 393215, 0, 65544, 327680, 0, 131083, 327699, 0, 65544, 327700, 0, 131083, 458751, 0, 65544, 393216, 0, 131083, 393235, 0, 65544, 393236, 0, 131083, 524287, 0, 65544, 458752, 0, 131083, 458771, 0, 65544, 458772, 0, 131083, 589823, 0, 65544, 524288, 0, 131083, 524307, 0, 65544, 524308, 0, 131083, 655359, 0, 65544, 589824, 0, 131083, 589843, 0, 65544, 589844, 0, 131083, 720895, 0, 65544, 655360, 0, 65542, 655361, 0, 10, 655362, 0, 10, 655363, 0, 10, 655364, 0, 10, 655365, 0, 10, 655366, 0, 10, 655367, 0, 10, 655368, 0, 10, 655369, 0, 10, 655370, 0, 10, 655371, 0, 10, 655372, 0, 10, 655373, 0, 10, 655374, 0, 10, 655375, 0, 10, 655376, 0, 10, 655377, 0, 10, 655378, 0, 10, 655379, 0, 65541, 655380, 0, 131083, 786431, 0, 196616, 720896, 0, 196617, 720897, 0, 196617, 720898, 0, 196617, 720899, 0, 196617, 720900, 0, 196617, 720901, 0, 196617, 720902, 0, 196617, 720903, 0, 196617, 720904, 0, 196617, 720905, 0, 196617, 720906, 0, 196617, 720907, 0, 196617, 720908, 0, 196617, 720909, 0, 196617, 720910, 0, 196617, 720911, 0, 196617, 720912, 0, 196617, 720913, 0, 196617, 720914, 0, 196617, 720915, 0, 196617, 720916, 0, 196619 )

[node name="ThothHand" type="Sprite" parent="."]
position = Vector2( 269, 158 )
texture = ExtResource( 15 )

[node name="ThothHand2" type="Sprite" parent="."]
position = Vector2( 51, 158 )
texture = ExtResource( 15 )
flip_h = true

[node name="ThothHead" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 68 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 160, -128 )

[node name="Camera2D" parent="Player" index="13"]
current = false

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="Transition_In" parent="." instance=ExtResource( 9 )]

[node name="UI" parent="." instance=ExtResource( 10 )]

[node name="audio_manager" parent="." instance=ExtResource( 12 )]

[node name="attack_timer" type="Timer" parent="."]
wait_time = 8.5
one_shot = true

[node name="Fade_In_White" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Fade_In_White"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim_fade" type="AnimationPlayer" parent="Fade_In_White/ColorRect"]
autoplay = "normal"
anims/fade-in = SubResource( 4 )
anims/fade-out = SubResource( 5 )
anims/full_color = SubResource( 7 )
anims/normal = SubResource( 6 )

[node name="Fade_In_Black" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Fade_In_Black"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 1 )

[node name="anim_fade_black" type="AnimationPlayer" parent="Fade_In_Black/ColorRect"]
autoplay = "normal"
anims/fade-in = SubResource( 8 )
anims/fade-out = SubResource( 9 )
anims/full_color = SubResource( 10 )
anims/normal = SubResource( 11 )

[node name="CelMap_sensor_22" parent="." instance=ExtResource( 14 )]
visible = false
cell_id = 22

[node name="Thoth_Moving_Platform" parent="." instance=ExtResource( 5 )]
position = Vector2( 283, 136 )
speed = 2.0
horizontal = false
distance = 64

[node name="Thoth_Moving_Platform2" parent="." instance=ExtResource( 5 )]
position = Vector2( 39, 72 )
speed = 2.0
horizontal = false
distance = -64

[connection signal="animation_finished" from="Spike_group/anim_player" to="." method="_on_anim_player_animation_finished"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="animation_finished" from="Fade_In_White/ColorRect/anim_fade" to="." method="_on_anim_fade_animation_finished"]
[connection signal="animation_finished" from="Fade_In_Black/ColorRect/anim_fade_black" to="." method="_on_anim_fade_black_animation_finished"]

[editable path="Player"]
[editable path="Thoth_Moving_Platform2"]
